feat: add passport auth and user api initialized
